<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/et_email_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:hint="@string/email"
            android:text="wp@gmail.com"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:elevation="30dp"
            android:ems="10"
            android:maxLength="6"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:text="123456"
            android:textColorHint="@color/colorWhite" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="70dp"
            android:background="#3a4f4e4d"
            android:elevation="30dp"
            android:text="@string/entrar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="#3a4f4e4d"
            android:elevation="30dp"
            android:text="@string/solicitar_cadastro"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>