...
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>
    <string name="btn_ler_codigo_de_barras_pela_cam">LER CÓDIGO PELA CÂMERA</string>
    <string name="btn_agendar_pagamento">AGENDAR</string>
    <string name="string_about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn.Lorem i
    <string name="string_network_error">Você não está conectado a Internet. Verifique sua conexão e tente novamente!</string>
    <string name="string_fields_error_login">Verifique os dados e tente novamente!</string>
    <string name="string_algo_deu_errado_login">Algo deu errado no Login!</string>
    <string name="string_error_password">Verifique os dados e tente novamente!</string>
</resources>

